--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin:'application'
 mainClassName = "ec.edu.juanultimate.conmutadortrenes.app.Aplicacion"
+compileJava.options.encoding = 'UTF-8'
 
 group 'ec.edu.juanultimate'
 version '1.0-SNAPSHOT'
